--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,36 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
+
+/* open-sans-300 - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: url('fonts/open-sans-v16-latin-300.woff');
+}
+
+/* open-sans-regular - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('fonts/open-sans-v16-latin-regular.woff');
+}
+
+/* open-sans-600 - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: url('fonts/open-sans-v16-latin-600.woff');
+}
+
+/* open-sans-700 - latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url('fonts/open-sans-v16-latin-700.woff');
+}
 
 @page {
   size: A4;
@@ -21,7 +52,7 @@
 * {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  font-size: 12pt;
+  font-size: 10pt;
 }
 
 h1, h2, h3 {
@@ -37,8 +68,7 @@ h2 {
 }
 
 h3 {
-  font-size: 14pt;
-  font-weight: 300;
+  font-size: 12pt;
 }
 
 
